SBVTestSuite/TestSuite/CompileTests/SCase/SCase42.stderr
SCase42.hs:12:14: error: [GHC-39584]
    " SCase42.hs:16:16-44: sCase: Non-exhaustive match:
        Type       : Expr
        Constructor: Add _ d | (Data.SBV.Core.Data..&&) (isAdd (getAdd_1 e)) ((Data.SBV.Core.Data..&&) (isAdd (getAdd_1 (getAdd_1 e))) (isNum (getAdd_1 (getAdd_1 (getAdd_1 e)))))
      NB. Guarded match might fail.

    " In the quasi-quotation:
        [sCase|Expr e of
               Zero                          -> 0
               Num k                         -> k
               Var s                         -> ite (s .== literal "a") 1 2
               Add (Add (Add (Num _) b) c) d -> t b + t c + t d
               Let _   _a  b                 -> t b
      |]
   |
12 | t e = [sCase|Expr e of
   |              ^^^^^^^^^...

